# llm-query-local-data

./: README.md  pyproject.toml
llm_search/: main.py
